<resources>
    <string name="app_name">PromoHunters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">PromoHunters</string>

    <!-- Strings related to login -->
    <string name="dialog_name">Selecciona una opción</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_titulo">Titulo</string>
    <string name="prompt_description">Descripción</string>
    <string name="prompt_precio">Precio</string>
    <string name="prompt_link">Link</string>
    <string name="prompt_spinner_tienda">Selecciona una tienda</string>
    <string name="prompt_spinner_categoria">Selecciona una categoría</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_asdasdasdasd">PromoHunters</string>
    <string-array name="array_categorias">
        <item>Tecnologia</item>
        <item>Electrodomesticos</item>
        <item>Abarrotes y Alimentos</item>
        <item>Viajes</item>
        <item>General</item>
    </string-array>

    <string-array name="array_tiendas">
        <item>Amazon</item>
        <item>Best-Buy</item>
        <item>Aurrera</item>
        <item>Costco</item>
        <item>Chedrahui</item>
        <item>Home Depot</item>
        <item>Linio</item>
        <item>Liverpool</item>
        <item>Sams Club</item>
        <item>Sears</item>
        <item>Soriana</item>
        <item>Superama</item>
        <item>Uber</item>
        <item>WaltMart</item>
    </string-array>
    <string-array name="array_options">
        <item>Camara</item>
        <item>Galería</item>
    </string-array>
</resources>
